--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api",
-  "version": "2.1.1-1",
+  "version": "2.1.1",
   "private": true,
   "dependencies": {
     "bluebird": "^3.5.1",
