--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "child_process": "^1.0.2",
     "compression": "^1.7.1",
     "connect-redis": "^3.3.2",
     "cookie-parser": "^1.4.3",
