--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api",
-  "version": "3.2.8-rc5",
+  "version": "3.2.9",
   "private": true,
   "dependencies": {
     "bluebird": "^3.5.1",
